--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap");
 
 *{
-    margin: -1px;
+    margin: 0px;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
@@ -24,6 +24,10 @@ body{
 .semi_bold{
     font-weight: 500;
     font-size: 16px;
+    color: rgb(255, 255, 255);
+}
+.semi_bold:hover{
+    opacity: 0.2;
 }
 
 .resume{
@@ -40,7 +44,7 @@ body{
 
 .resume .resume_left .resume_profile{
     width: 100%;
-    height: 280px;
+  
 }
 
 .resume .resume_left .resume_profile img{
@@ -200,17 +204,20 @@ body{
     border: 2px solid #124457;
 }
 
-div.hide{
-    height: 200px;
+ul.show{
+    height: 240px;
+    transition: height 0.3s ease-out;
+   
 }
 
-div.hide_show{
+ul.hide{
     overflow: hidden;
-    transition: height 0.3s ease-out;
     height: 0px;
+    transition: height 0.3s ease-out;
+
 }
-.active,
-.click:hover{
-    opacity: 1;
-    text-decoration: overline;
+h3.bold:hover{
+    opacity: 0.4;
+    text-decoration: underline;
+    cursor: pointer;
 }
